[workspace.package]
name = "versoriumx-technology"  # Updated project name
version = "1.0.8"
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
homepage = "https://VersoriumX.github.io/versoriumx-technology"  # Update with your actual homepage
repository = "https://github.com/VersoriumX/versoriumx-technology"  # Update with your actual repository
exclude = [".github/"]

[workspace]
members = [
    "bin/versoriumx-bench/",  # Updated paths to reflect VersoriumX
    "bin/versoriumx/",
    "crates/blockchain-tree-api/",
    "crates/blockchain-tree/",
    "crates/chain-state/",
    "crates/chainspec/",
    "crates/cli/cli/",
    "crates/cli/commands/",
    "crates/cli/runner/",
    "crates/cli/util/",
    "crates/config/",
    "crates/consensus/auto-seal/",
    "crates/consensus/beacon/",
    "crates/consensus/common/",
    "crates/consensus/consensus/",
    "crates/consensus/debug-client/",
    "crates/e2e-test-utils/",
    "crates/engine/invalid-block-hooks/",
    "crates/engine/local",
    "crates/engine/primitives/",
    "crates/engine/service",
    "crates/engine/tree/",
    "crates/engine/util/",
    "crates/errors/",
    "crates/ethereum-forks/",
    "crates/ethereum/cli/",
    "crates/ethereum/consensus/",
    "crates/ethereum/engine-primitives/",
    "crates/ethereum/evm",
    "crates/ethereum/node",
    "crates/ethereum/payload/",
    "crates/etl/",
    "crates/evm/",
    "crates/evm/execution-errors",
    "crates/evm/execution-types",
    "crates/exex/exex/",
    "crates/exex/test-utils/",
    "crates/exex/types/",
    "crates/metrics/",
    "crates/net/banlist/",
    "crates/net/discv4/",
    "crates/net/discv5/",
    "crates/net/dns/",
    "crates/net/downloaders/",
    "crates/net/ecies/",
    "crates/net/eth-wire-types",
    "crates/net/eth-wire/",
    "crates/net/nat/",
    "crates/net/network-api/",
    "crates/net/network-types/",
    "crates/net/network/",
    "crates/net/p2p/",
    "crates/net/peers/",
    "crates/node/api/",
    "crates/node/builder/",
    "crates/node/core/",
    "crates/node/events/",
    "crates/node/metrics",
    "crates/node/types",
    "crates/optimism/bin",
    "crates/optimism/chainspec",
    "crates/optimism/cli",
    "crates/optimism/consensus",
    "crates/optimism/evm/",
    "crates/optimism/hardforks/",
    "crates/optimism/node/",
    "crates/optimism/payload/",
    "crates/optimism/primitives/",
    "crates/optimism/rpc/",
    "crates/optimism/storage",
    "crates/payload/basic/",
    "crates/payload/builder/",
    "crates/payload/primitives/",
    "crates/payload/validator/",
    "crates/primitives-traits/",
    "crates/primitives/",
    "crates/prune/prune",
    "crates/prune/types",
    "crates/revm/",
    "crates/rpc/ipc/",
    "crates/rpc/rpc-api/",
    "crates/rpc/rpc-builder/",
    "crates/rpc/rpc-engine-api/",
    "crates/rpc/rpc-eth-api/",
    "crates/rpc/rpc-eth-types/",
    "crates/rpc/rpc-layer",
    "crates/rpc/rpc-server-types/",
    "crates/rpc/rpc-testing-util/",
    "crates/rpc/rpc-types-compat/",
    "crates/rpc/rpc/",
    "crates/stages/api/",
    "crates/stages/stages/",
    "
